--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
 </section>
 
 
-<section class="main-content" *ngIf="isSmallScreen">
+<section class="main-content">
   <div class="container">
     <div class="main-info">
       <span class="main-small-info">Новое меню</span>
