Sucsess on autofill

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,7 +95,7 @@
               <div class="price-title">{{product.price}} {{currency}}</div>
               <div class="weight-title">{{product.grams}} гр</div>
             </div>
-            <button class="inlay-button" (click)="scrollTo(order)">Заказать <img src="./assets/images/Vector.png" alt="cart"
+            <button class="inlay-button" (click)="scrollTo(order, product)">Заказать <img src="./assets/images/Vector.png" alt="cart"
                                                        class="inlay-cart"/></button>
           </div>
         </div>
