--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
     <div class="products-cards">
       <div class="product-card" *ngFor="let product of productsData">
         <div class="product-inlay">
-          <img src="./assets/images/{{product.image}}" alt="burger" class="product-image"/>
+          <img src="{{product.image}}" alt="burger" class="product-image"/>
           <div class="product-title">{{product.title}}</div>
           <div class="product-text">{{product.text}}
           </div>
