--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
         <button class="button" id="main-action-button" (click)="scrollTo(products)">Смотреть меню</button>
       </div>
     </div>
-    <img src="./assets/images/main_burger.png" alt="phat burger" class="main-image">
+    <img src="./assets/images/main_burger.png" alt="phat burger" class="main-image" [ngStyle]="mainImageStyle">
   </div>
 
 </section>
@@ -107,10 +107,10 @@
 <section class="order-section" id="order" #order>
   <Div class="container">
     <H2 class="order-title">оформление заказа</H2>
-    <img src="./assets/images/order_image.png" alt="cardboardbox" class="order_image"/>
+    <img src="./assets/images/order_image.png" alt="cardboardbox" class="order_image" [ngStyle]="orderImageStyle">
     <div class="contain-orderbox">
       <div class="main-orderbox">
-        <div class="order-text">Заполните все данные и наш менеджер свяжется с вами для подтверждения заказа
+        <div class="order-text">Заполните все данные  и наш менеджер свяжется с вами для подтверждения заказа
         </div>
         <div class="order-form" [formGroup]="form">
           <div class="input-container" [class]="{'error': form.get('order')?.invalid && (form.get('order')?.dirty || form.get('order')?.touched) }">
@@ -145,6 +145,9 @@
     <div class="rights">Все права защищены</div>
   </div>
 </footer>
+<div class="loader" [class]="{'showed': loaderShowed}" *ngIf="loader">
+  <lottie-player src="./assets/burger.json" background="transparent" speed="1.5" autoplay></lottie-player>
+</div>
 
 <!--<script src="scripts/script.js"></script>-->
 
