Preparing structure for placeholders tweaks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,6 +80,8 @@
     </div>
   </div>
 </section>
+
+<!--order-form-->
 <section class="products" id="products" #products>
   <div class="container">
     <H1 class="products-title">выберите свой бургер</H1>
